enhanced database structure, DTO implementations, better security, enhancements to ability to change data easily